--- a/tox.ini
+++ b/tox.ini
@@ -41,10 +41,11 @@ commands =
 
 [testenv:mypy]
 basepython = python3.8
+whitelist_externals = sh
 deps =
     -rrequirements_dev.txt
 commands =
-    mypy saleor
+    sh -c 'find saleor -name "*.py" -type f ! -path "*tests*" | xargs mypy'
 
 [testenv:check_gql_schema]
 basepython = python3.8
